Removed generic CSS selectors
Removed/refactored CSS selectors that might affect any elements outside
of the supersized DOM. Cleaned up demos to match latest
API/requirements.

--- a/slideshow/theme/supersized.shutter.css
+++ b/slideshow/theme/supersized.shutter.css
@@ -11,6 +11,9 @@
 	
 */
 
+.ssControlsContainer ul {margin:0;padding:0;}
+.ssControlsContainer img {border:none;}
+
 	/* Controls Bar
 	----------------------------*/
 	#controls-wrapper { margin:0 auto; height:42px; width:100%; bottom:0px; left:0; z-index:4; background:url(../img/nav-bg.png) repeat-x; position:fixed; }
